Fixing some alignment issues with the info page
git-svn-id: https://svn.wso2.org/repos/wso2/carbon/platform/trunk@125868 a5903396-d722-0410-b921-86c7d4935375

--- a/components/apimgt/api-store-new/src/tests/mockups/css/style.css
+++ b/components/apimgt/api-store-new/src/tests/mockups/css/style.css
@@ -319,7 +319,8 @@ ul.tabs li a:hover{
     color:#c8c8c8;
 }
 .comment-box{
-    height:50px;
+    height:70px;
+    margin-left:0;
 }
 .item-title{
     color:#000;
